--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "nodemon": "^1.18.11",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "validator": "^10.11.0"
   }
 }
