--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/Robertfarb/spot-price-io#readme",
   "dependencies": {
+    "ag-grid-community": "^20.2.0",
+    "ag-grid-react": "^20.2.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
@@ -33,6 +35,9 @@
     "nodemon": "^1.18.11",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-dom-factories": "^1.0.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "validator": "^10.11.0"
