--- a/package.json
+++ b/package.json
@@ -38,8 +38,11 @@
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-dom-factories": "^1.0.2",
+    "react-table": "^6.10.0",
+    "react-tabulator": "^0.9.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "typescript": "^3.4.5",
     "validator": "^10.11.0"
   }
 }
