--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   },
   "homepage": "https://github.com/Robertfarb/spot-price-io#readme",
   "dependencies": {
-    "ag-grid-community": "^20.2.0",
-    "ag-grid-react": "^20.2.0",
+    "@material-ui/core": "^3.9.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
@@ -32,14 +31,13 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "mongoose": "^5.5.2",
+    "mui-datatables": "^2.0.0",
     "nodemon": "^1.18.11",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-dom-factories": "^1.0.2",
-    "react-table": "^6.10.0",
-    "react-tabulator": "^0.9.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "typescript": "^3.4.5",
