--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
+    "mongodb": "^3.2.2",
     "mongoose": "^5.5.2",
     "mui-datatables": "^2.0.0",
     "nodemon": "^1.18.11",
