--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "bugs": {
     "url": "https://github.com/Robertfarb/spot-price-io/issues"
   },
+  "engines": {
+    "node": "15.0"
+  },
   "homepage": "https://github.com/Robertfarb/spot-price-io#readme",
   "dependencies": {
     "@material-ui/core": "^3.9.3",
